--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="column">
         <article class="panel is-info">
           <p class="panel-heading">
-            Mediapipe Face Mesh
+            Face Mesh
           </p>
           <div class="panel-block">
             <canvas class="output2" width="480px" height="480px"></canvas>
